--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Eitan Pearl</title>
 	</head>
 	<body>
-		<nav>
+<!--		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
@@ -12,6 +12,7 @@
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
+-->
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Eitan!</h1>
