--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     		<div class="blurb">
         		<h1>Hi there, I'm Eitan!</h1>
 				<p>I'm a senior at the Macaulay Honors College at CCNY. </p>
-				<iframe width='100%' height='520' frameborder='0' src='https://eitan.cartodb.com/viz/73a8e9be-1acb-11e5-8c92-0e6e1df11cbf/embed_map' allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+				<iframe width='100%' height='520' frameborder='0' src='https://eitan.cartodb.com/viz/73a8e9be-1acb-11e5-8c92-0e6e1df11cbf/embed_map' allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen>map</iframe>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
